fixed alignment for the avatar and buttons

--- a/src/pages/Single/Single.scss
+++ b/src/pages/Single/Single.scss
@@ -36,9 +36,10 @@
 .single {
     &__user-container {
         display: flex;
-        flex-direction: column;
         align-items: center;
         gap: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
     }
     &__user {
         display: flex;
